<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="txt_app_name">Jozi Street User</string>
    <string name="google_maps_key">AIzaSyDb3oLDTkoVpLzE4PxZ0PL1ENW8rVI7OU4</string>
    <string name="old_google_maps_key">AIzaSyDb3oLDTkoVpLzE4PxZ0PL1ENW8rVI7OU4</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2VlbWVzYXZlIiwiYSI6ImNrN3NzaXhuNDBtbDQzZXFydHU5bjc1YTEifQ.8sDVW0XOacM_r6ACX0M7TQ</string>
    <string name="txt_channel_id">jozistreet_user_channel</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="txt_file_provider_authority">.files</string>
    <string name="txt_main_message_activity_permission_rational">Track activity changes by letting us read your phone\'s activity transitions.</string>
    <string name="txt_details_message_activity_permission_rational">This app\'s experience requires access to your phone\'s activity transitions to display changes from walking to standing still.</string>
    <string name="txt_no_thanks_activity_permission_rational">No Thanks</string>
    <string name="txt_continue_activity_permission_rational">Continue</string>
    <string name="txt_everything_and_everyone_connected">Everything and\neveryone connected</string>
    <string name="txt_a_social_enterprise_for_the_people">A social enterprise\nfor the people</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_log_in">Log In</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_already_member">You already a member?</string>
    <string name="txt_or">or</string>
    <string name="txt_spalsh_desc">Connect with stores, products and \nactivities around you.</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_google">Google</string>
    <string name="txt_login_to_your_account">Login to your\naccount</string>
    <string name="txt_email_address">Email address</string>
    <string name="txt_password">Password</string>
    <string name="txt_connect">Connect</string>
    <string name="txt_connect_later"><u>Connect later</u></string>
    <string name="txt_connect_your_devices">Connect your\ndevices</string>
    <string name="txt_set_up_your_phone_as">Set up your phone as your first connection to share data</string>
    <string name="txt_connect_your_mobile_and">Connect your mobile and wearable data and sam will keep you busy and manage your schedule. Sam can match jobs to your location, profession and rates.</string>
    <string name="txt_setup_connection">Setup Connection</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_location">Location</string>
    <string name="txt_share_connection_location">Share connection\'s location</string>
    <string name="txt_accelerometer">Accelerometer</string>
    <string name="txt_share_accelerator_reading">Share accelerator reading</string>
    <string name="txt_magnetometer">Magnetometer</string>
    <string name="txt_share_magnetometer_reading">Share magnetometer reading</string>
    <string name="txt_gyroscope">Gyroscope</string>
    <string name="txt_share_gyroscope_reading">Share gyroscope reading</string>
    <string name="txt_compass">Compass</string>
    <string name="txt_share_compass_reading">Share compass reading</string>
    <string name="txt_barometer">Barometer</string>
    <string name="txt_share_barometer_reading">Share barometer reading</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_active_all_available">Activate all available</string>
    <string name="txt_connection_name">Connection name</string>
    <string name="txt_please_enter_connection_name">Please enter connection name</string>
    <string name="txt_please_enter_email">Please enter email</string>
    <string name="txt_please_enter_password">Please enter password</string>
    <string name="txt_version">Version 5.2</string>
    <string name="txt_signup">Sign Up</string>
    <string name="slide_1_desc">What would you like to do\n on the Jozi Street app?</string>
    <string name="txt_want_buy_product">I want to buy products</string>
    <string name="txt_want_sell_product">I want to sell products</string>
    <string name="txt_next">Next</string>
    <string name="txt_tell_us">Tell us more</string>
    <string name="slide_2_desc">Enter your name and surname\nbelow, this can be changed later:</string>
    <string name="txt_enter_detail">Enter your details</string>
    <string name="slide_3_desc">Enter your number or email and\npassword:</string>
    <string name="txt_otp_verification">OTP Verification</string>
    <string name="slide_4_desc">Enter the 6 digit code sent to\n</string>
    <string name="txt_surname">Surname</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_phone">Mobile</string>
    <string name="txt_mobile_number">Mobile Number</string>
    <string name="txt_didnt_getcode">Didn\'t get it? Resend</string>
    <string name="msg_valid_name">Enter your name and surname</string>
    <string name="msg_valid_number">Enter your number and password</string>
    <string name="msg_empty_email">Enter your email  and password</string>
    <string name="msg_valid_email">Enter valid email address</string>
    <string name="msg_valid_phone">Enter valid phone number</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_donthave_account">Don\'t have an account?</string>
    <string name="txt_hello">Hello again!</string>
    <string name="txt_sign_desc">Welcome back, enter your\ndetails sign in:</string>
    <string name="txt_forgot_password_desc">Enter your mobile number or email to\nreceive a verification code:</string>
    <string name="txt_send">Send</string>
    <string name="txt_reset_password_desc">The password will be replaced with\nthe password entered here.</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_change">Change</string>
    <string name="txt_app_names">Jozi Street User</string>
    <string name="start_1_desc">We\'re bringing you the best deals and\noffers from your favourite local brands\nand stores, in the palm of your hands.\nStart saving today!</string>
    <string name="txt_click_collects"><![CDATA[Click & Collect]]></string>
    <string name="start_2_desc">From local selected stores, you can\nshop all your favourite items, pay on\nthe app and collect from the store\nwhen the order is ready.</string>
    <string name="txt_click_delivers"><![CDATA[Click & Deliver]]></string>
    <string name="start_3_desc">From local selected stores, you can\nshop all your favourite items, pay on\nthe app and get it delivered to your\ndoor when the order is ready.</string>
    <string name="txt_community">Our Community</string>
    <string name="start_4_desc">Keep us with stores, brands and\nother users through stories and posts.\nReview your favourite products, share\nyour favourite deals and more.</string>
    <string name="txt_started">Getting Started</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_join">Join now</string>
    <string name="txt_dot">.</string>
    <string name="txt_warning">Warning !</string>
    <string name="txt_do_you_want_to_finish_">Are you sure you want to exit?</string>
    <string name="txt_do_you_want_to_accept_">Do you want to accept ?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_wait">Wait</string>
    <string name="txt_no">No</string>
    <string name="home_txt">We\'ve missed you, let\'s get shopping</string>
    <string name="txt_discover">Stories</string>
    <string name="txt_story_name_sample">JK Burgers</string>
    <string name="txt_click_collect">Click and Collect</string>
    <string name="txt_click_deliver">Click and Deliver</string>
    <string name="txt_my_deals">My Deals</string>
    <string name="txt_deal_special">Promotions</string>
    <string name="txt_trending_brand">Trending Brands Near Me</string>
    <string name="txt_featured_store">Featured Stores</string>
    <string name="txt_add_to_cart">Add To Cart</string>
    <string name="txt_in_cart">Remove from cart</string>
    <string name="txt_best_selling">Best Deals</string>
    <string name="txt_see_all">See All</string>
    <string name="txt_recent">Recent Posts</string>
    <string name="txt_most_popular">Most Popular</string>
    <string name="txt_community_update">Community Updates</string>
    <string name="txt_shares_comments">%d Comments</string>
    <string name="alert_location">Allow Jozi Street to use your location when you are not using the app? The app will notify you when you are within 3km of a store that has products in your shopping list.</string>
    <string name="alert_background_location">Allow Jozi Street to use your background location when you are not using the app? The app will notify you when you are within 3km of a store that has products in your shopping list.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="txt_your_current_location">Your current location</string>
    <string name="txt_search_location">Search Location</string>
    <string name="txt_follow">Follow</string>
    <string name="txt_see_details">See Details</string>
    <string name="txt_view_click_collect"><![CDATA[View Click & Collect]]></string>
    <string name="txt_like">Like</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_share">Share</string>
    <string name="shares_comments">%d Comments</string>
    <string name="share_to">Share to</string>
    <string name="share_with">Share with</string>
    <string name="txt_no_result">No More Results</string>
    <string name="txt_try_again">Try again?</string>
    <string name="txt_view_store">View Store</string>
    <string name="add_to_list">Add to Shopping list</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_my_cart">My Cart</string>
    <string name="txt_order_history">Order History</string>
    <string name="txt_my_wallet">My Wallet</string>
    <string name="txt_my_location">My Location</string>
    <string name="txt_contact_us">Contact Us</string>
    <string name="txt_support">Support</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_reward">Rewards</string>
    <string name="txt_follower">Followers</string>
    <string name="txt_following">Following</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="txt_my_feed">My Feed</string>
    <string name="txt_my_post">My Posts</string>
    <string name="txt_dashboard_point_desc">You need 10 points for reward</string>
    <string name="txt_savings">Savings</string>
    <string name="txt_points">Points</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_in_app_notification">In App Notifications</string>
    <string name="txt_audio_using">Audio When Using App</string>
    <string name="txt_address">Address</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_microphone">Microphone</string>
    <string name="new_post">New Post</string>
    <string name="write_caption">Write a caption...</string>
    <string name="txt_description">Description</string>
    <string name="type_description_">Type description within 200 words</string>
    <string name="txt_add_location">Add location</string>
    <string name="add_tag">Add tag</string>
    <string name="friend">Friend</string>
    <string name="txt_store">Store</string>
    <string name="txt_brand">Brand</string>
    <string name="txt_product">Product</string>
    <string name="by_register_">By registering in you agree to the</string>
    <string name="terms">Terms of Service</string>
    <string name="privacy">Privacy Policy</string>
    <string name="and">and</string>
</resources>