<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/txt_welcome"
        android:textColor="@color/bg_main_color"
        android:textSize="@dimen/text_21"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        style="@style/TextStyleLargeRegular"
        android:textColor="@color/grey_dark"
        android:text="@string/slide_1_desc"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_gravity="center"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/ckBuy"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/grey_dark"
                android:textSize="@dimen/text_14"
                android:paddingLeft="@dimen/margin_10"
                android:checked="true"
                android:text="@string/txt_want_buy_product"/>
            <CheckBox
                android:id="@+id/ckSell"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/grey_dark"
                android:textSize="@dimen/text_14"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingLeft="@dimen/margin_10"
                android:text="@string/txt_want_sell_product"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_grey_800"
        android:textSize="13sp"
        android:fontFamily="@font/normal"
        android:text="@string/by_register_"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="30dp">
        <TextView
            android:id="@+id/txtTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"
            android:fontFamily="@font/normal"
            android:text="@string/terms"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_grey_800"
            android:textSize="13sp"
            android:fontFamily="@font/normal"
            android:text="@string/and"
            android:visibility="gone"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/txtPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"
            android:fontFamily="@font/normal"
            android:text="@string/privacy"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>