<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lytTop"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_marginStart="15dp" />
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:layout_height="30dp"
            android:text="@string/new_post"
            android:textSize="21sp"
            android:textColor="@color/md_grey_800"
            android:fontFamily="@font/semibold"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:layout_marginEnd="15dp"
            android:background="@color/transparent_color"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_share"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/semibold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgMedia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="7dp" />

                <ImageView
                    android:id="@+id/imgPlay"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_play" />

            </RelativeLayout>

            <EditText
                android:id="@+id/editCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent_color"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/normal"
                android:textColor="@color/md_grey_800"
                android:textSize="14sp"
                android:hint="@string/write_caption"
                android:inputType="text"
                android:imeOptions="actionNext"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_main_color"
            android:textSize="13sp"
            android:text="@string/txt_description"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent_color"
                android:fontFamily="@font/normal"
                android:gravity="top"
                android:hint="@string/type_description_"
                android:maxLength="200"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/md_grey_800"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_main_color" />

        </RelativeLayout>


        <TextView
            android:id="@+id/txtLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/bg_main_color"
            android:textSize="13sp"
            android:text="[200 words left]"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <RelativeLayout
            android:id="@+id/li_add_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="15dp">

            <ImageView
                android:id="@+id/imgLocation"
                android:layout_width="17dp"
                android:layout_height="21dp"
                android:src="@drawable/ic_marker"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/txtAddLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/imgLocation"
                android:text="@string/txt_add_location"
                android:textColor="@color/md_grey_800"
                android:textSize="15sp" />


            <ImageView
                android:id="@+id/imgDelLocation"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/ic_cancel_grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/md_grey_200" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/li_tag"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/txtAddTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:inputType="text"
                android:text="@string/add_tag"
                android:textColor="@color/md_grey_800"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/txtAddTag"
                android:layout_marginStart="25dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btnTagFriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_color"
                    android:text="@string/friend"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:id="@+id/btnTagStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/txt_store"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/btnTagBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/txt_brand"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:id="@+id/btnTagProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/txt_product"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/md_grey_200" />
        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTag"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>